--- a/gb/20/8/9/n12317265.md
+++ b/gb/20/8/9/n12317265.md
@@ -1,60 +1,65 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mlejrr3246/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mlejrr3246/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mlejrr3246/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mlejrr3246/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mlejrr3246/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mlejrr3246/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mlejrr3246/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mlejrr3246/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mlejrr3246/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mlejrr3246/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mlejrr3246/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mlejrr3246/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mlejrr3246/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mlejrr3246/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mlejrr3246/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mlejrr3246/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/mlejrr3246/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mlejrr3246/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/mlejrr3246/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mlejrr3246/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mlejrr3246/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mlejrr3246/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mlejrr3246/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mlejrr3246/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>反16号公投案 圣地亚哥集会并车队游行</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/08/200809051350100769-600x400.jpg" />
 <h6>8月8日，圣地亚哥亚裔社区逾百人参加车队游行，抗议加州第16号公投案。图为一辆参与游行的私家车。（邓舒语/大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年08月09日讯】（大纪元记者邓舒语<ahref="https://github.com/mlejrr3246/djy/blob/master/gb/tag/%E5%9C%A3%E5%9C%B0%E4%BA%9A%E5%93%A5.md#1">圣地亚哥</a>报导）近期，<ahref="https://github.com/mlejrr3246/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E.md#1">加州</a>第16号公投案引发抗议潮，加州多地先后出现大规模<ahref="https://github.com/mlejrr3246/djy/blob/master/gb/tag/%E8%BD%A6%E9%98%9F%E6%B8%B8%E8%A1%8C.md#1">车队游行</a>，呼吁对该项公投案投反对票。8月8日，<ahref="https://github.com/mlejrr3246/djy/blob/master/gb/tag/%E5%9C%A3%E5%9C%B0%E4%BA%9A%E5%93%A5.md#1">圣地亚哥</a>亚裔社区加入抗议，在市中心举行<ahref="https://github.com/mlejrr3246/djy/blob/master/gb/tag/%E8%BD%A6%E9%98%9F%E6%B8%B8%E8%A1%8C.md#1">车队游行</a>。百余辆私家车组成的车队从当地地标巴博亚公园（Balboa Park）出发至市中心主干道，游行经过圣地亚哥县政府大楼。</p>
-<p>游行活动由<ahref="https://github.com/mlejrr3246/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E.md#1">加州</a>平等权利委员会（Californians for Equal Rights，CFER）成员施瑜与圣地亚哥亚裔平权会联合举办。亚裔平权会理事徐佶翮说，此次加入全州性的抗议活动是希望通过车队游行的方式，吸引更多人关注16号公投案引发的问题，同时，呼吁更多社区公民在大选中以实际行动反对它。</p>
-<p>加州第16号公投案（即州议院ACA-5修宪案），要求废除1996年加州公投通过的第209号公投案，重新将种族、性别作为公立大学招生、公职应聘及公共承包项目合同审批的考量因素，并为不同族裔制定相应的配额。</p>
+	<p>【大纪元2020年08月09日讯】（大纪元记者邓舒语<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%9C%A3%E5%9C%B0%E4%BA%9A%E5%93%A5.md#1">圣地亚哥</a>报导）近期，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E.md#1">加州</a>第16号公投案引发抗议潮，加州多地先后出现大规模<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%BD%A6%E9%98%9F%E6%B8%B8%E8%A1%8C.md#1">车队游行</a>，呼吁对该项公投案投反对票。8月8日，<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%9C%A3%E5%9C%B0%E4%BA%9A%E5%93%A5.md#1">圣地亚哥</a>亚裔社区加入抗议，在市中心举行<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E8%BD%A6%E9%98%9F%E6%B8%B8%E8%A1%8C.md#1">车队游行</a>。百余辆私家车组成的车队从当地地标巴博亚公园（Balboa Park）出发至市中心主干道，游行经过圣地亚哥县政府大楼。</p>
+<p>游行活动由圣地亚哥亚裔平权会和当地居民施瑜联合举办，并获得了<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%8A%A0%E5%B7%9E.md#1">加州</a>平等权利委员会（Californians for Equal Rights，CFER）的帮助。亚裔平权会理事徐佶翮说，此次加入全州性的抗议活动是希望通过车队游行的方式，吸引更多人关注16号公投案引发的问题，同时，呼吁更多社区公民在大选中以实际行动反对它。</p>
+<p>加州第16号公投案（即州议院ACA-5修宪案），要求废除1996年加州公投通过的第209号公投案，重新将种族、性别作为公立大学招生、公职应聘及公共承包项目合同审批的考量因素。</p>
 <p>“加州209号公投案通过以后，我们看到了学生凭能力被录取。少数族裔的学生，凭借能力争取到UC录取的比率得到了大幅上升，”加州众议院选区77区韩裔候选人朱妮·杨·卡特尔（June Yang Cutter）说，“这些数据显示，根本没有必要废除第209号修正案，因为它实际上是有效用的。此外，它也使学生的学术成功率和毕业率得到了上升，”</p>
 <p>当日参与车队游行的韩女士表示，废除209号修正案将会削弱州民的竞争能力。“不是根据你的能力强弱，而是根据你的肤色，种族，甚至性别，来决定你是否能够入学。”</p>
 <p>韩女士说第16号公投案的危险性在于：“短期是对自己孩子的影响，长期来看，如果一个社会缺乏了基本的公正竞争原理，不是奖励勤劳的人，而是让他们遵循先天没有办法改变的血统，种族等因素来分配，那么这个社会会是缺乏竞争力的。对所有人都会有影响。”</p>
 <p>另一位参加游行的钱女士表示，弱势群体是需要帮助，但不能以种族来表达。“我认为一些白人，他们也有的经济困难，他们也需要帮助。第16号公投案打着反种族歧视的名义，实际上在搞第二次的种族歧视。”</p>
 <p>当日圣地亚哥的车队游行是全州就反对第16号公投案发起的第八个车队游行。同日，南加州的亚凯迪亚（Arcadia）和北加州的沙加缅度（Sacramento）也同时进行了反对第16号提案的车队游行。</p>
-<p>圣地亚哥游行当日，除了州众议院77区候选人朱妮．杨．卡特尔，联邦人权委员会委员、圣地亚哥大学（USD）法学教授盖尔．赫里奥特（Gail Heriot），和加州部门主任（State Director）达米安．弗塞尔（Damian Fussel）等，也到场声援。赫里奥特同时为反16号提案的宣传运动捐款1万美元。</p>
-<figure id="attachment_12317286" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/200809052343100769.jpg"><img class="wp-image-12317286 size-medium" title="圣地亚哥车队游行抗议Prop16" src="https://i.epochtimes.com/assets/uploads/2020/08/200809052343100769-450x299.jpg" alt="圣地亚哥车队游行抗议Prop16" width="450" b="299" /></a><figcaption class="wp-caption-text">8月8日，圣地亚哥亚裔社区逾百人参加车队游行，抗议加州第16号公投案。图为一辆贴着“给Prop16投反对票”标语的私家车。（邓舒语/大纪元）</figcaption></figure>
-<figure id="attachment_12317291" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/200809052214100769.jpg"><img class="wp-image-12317291 size-medium" title="圣地亚哥车队游行抗议Prop16" src="https://i.epochtimes.com/assets/uploads/2020/08/200809052214100769-450x299.jpg" alt="圣地亚哥车队游行抗议Prop16" width="450" b="299" /></a><figcaption class="wp-caption-text">8月8日，圣地亚哥亚裔社区逾百人集会并参加车队游行，反对加州第16号公投案。</figcaption></figure>
-<figure id="attachment_12317288" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/200809052446100769.jpg"><img class="wp-image-12317288 size-medium" title="圣地亚哥车队游行抗议Prop16" src="https://i.epochtimes.com/assets/uploads/2020/08/200809052446100769-450x299.jpg" alt="圣地亚哥车队游行抗议Prop16" width="450" b="299" /></a><figcaption class="wp-caption-text">8月8日，圣地亚哥亚裔社区逾百人参加集会，反对加州第16号公投案。集会后进行了车队游行。图为加州众议院选区77区韩裔候选人朱妮·杨·卡特尔（June Yang Cutter）在集会上发言。（邓舒语/大纪元）</figcaption></figure>
-<figure id="attachment_12317285" style="width: 450px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/08/200809052826100769.jpg"><img class="wp-image-12317285 size-medium" title="圣地亚哥车队游行抗议Prop16" src="https://i.epochtimes.com/assets/uploads/2020/08/200809052826100769-450x299.jpg" alt="圣地亚哥车队游行抗议Prop16" width="450" b="299" /></a><figcaption class="wp-caption-text">8月8日，圣地亚哥亚裔社区逾百人参加加州第16号公投案抗议集会，图为圣地亚哥平权会理事徐佶翮（左一）与加州众议院选区77区韩裔候选人朱妮·杨·卡特尔（June Yang Cutter）（右一），和加州部门主任达米安．弗塞尔（Damian Fussel）（中）合影。</figcaption></figure>
+<p>圣地亚哥游行当日，除了州众议院77区候选人朱妮．杨．卡特尔，联邦人权委员会委员、圣地亚哥大学（USD）法学教授盖尔．赫里奥特（Gail Heriot），和CFER州部门主任（State Director）达米安．弗塞尔（Damian Fussel）等，也到场声援。赫里奥特同时为反16号提案的宣传运动捐款1万美元。</p>
+<figure id="attachment_12317286" aria-describedby="caption-attachment-12317286" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/200809052343100769.jpg"><img class="wp-image-12317286 size-medium" title="圣地亚哥车队游行抗议Prop16" src="https://i.epochtimes.com/assets/uploads/2020/08/200809052343100769-450x299.jpg" alt="圣地亚哥车队游行抗议Prop16" width="450" b="299" /></a><figcaption id="caption-attachment-12317286" class="wp-caption-text">8月8日，圣地亚哥亚裔社区逾百人参加车队游行，抗议加州第16号公投案。图为一辆贴着“给Prop16投反对票”标语的私家车。（邓舒语/大纪元）</figcaption></figure>
+<figure id="attachment_12317291" aria-describedby="caption-attachment-12317291" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/200809052214100769.jpg"><img class="wp-image-12317291 size-medium" title="圣地亚哥车队游行抗议Prop16" src="https://i.epochtimes.com/assets/uploads/2020/08/200809052214100769-450x299.jpg" alt="圣地亚哥车队游行抗议Prop16" width="450" b="299" /></a><figcaption id="caption-attachment-12317291" class="wp-caption-text">8月8日，圣地亚哥亚裔社区逾百人集会并参加车队游行，反对加州第16号公投案。</figcaption></figure>
+<figure id="attachment_12317288" aria-describedby="caption-attachment-12317288" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/200809052446100769.jpg"><img class="wp-image-12317288 size-medium" title="圣地亚哥车队游行抗议Prop16" src="https://i.epochtimes.com/assets/uploads/2020/08/200809052446100769-450x299.jpg" alt="圣地亚哥车队游行抗议Prop16" width="450" b="299" /></a><figcaption id="caption-attachment-12317288" class="wp-caption-text">8月8日，圣地亚哥亚裔社区逾百人参加集会，反对加州第16号公投案。集会后进行了车队游行。图为加州众议院选区77区韩裔候选人朱妮·杨·卡特尔（June Yang Cutter）在集会上发言。（邓舒语/大纪元）</figcaption></figure>
+<figure id="attachment_12318210" aria-describedby="caption-attachment-12318210" style="width: 450px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/08/200809164948100769.jpg"><img class="wp-image-12318210 size-medium" title="圣地亚哥车队游行抗议Prop16" src="https://i.epochtimes.com/assets/uploads/2020/08/200809164948100769-450x299.jpg" alt="圣地亚哥车队游行抗议Prop16" width="450" b="299" /></a><figcaption id="caption-attachment-12318210" class="wp-caption-text">8月8日，圣地亚哥亚裔社区逾百人参加加州第16号公投案抗议集会，图为圣地亚哥平权会理事徐佶翮（左一）与加州众议院选区77区韩裔候选人朱妮·杨·卡特尔（June Yang Cutter）（右一），和CFER州部门主任达米安．弗塞尔（Damian Fussel）（中）合影。</figcaption></figure>
 <p>责任编辑：田磊</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/8/n12315707.md#1">乔州93岁老兵被骗寄出1.4万现金 警官追回</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/8/n12316549.md#1">美军两栖战车和八遇难者遗骸已打捞上岸</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/8/n12316679.md#1">SUV油箱藏百万美元 墨西哥男加州公路上被捕</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/9/n12317106.md#1">“No on Prop 16” 数百民众亚市游行反歧视</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/8/8/n12315707.md#1">乔州93岁老兵被骗寄出1.4万现金 警官追回</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/8/8/n12316549.md#1">美军两栖战车和八遇难者遗骸已打捞上岸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/8/8/n12316679.md#1">SUV油箱藏百万美元 墨西哥男加州公路上被捕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/8/9/n12317106.md#1">“No on Prop 16” 数百民众亚市游行反歧视</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/3/n10612921.md#1" target="_blank">炮灰与英雄——中美韩战军人的命运</a></li><li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/9/n11245885.md#1" target="_blank">新泽西州参众议院联合决议褒奖法轮大法日</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/29/n10004659.md#1" target="_blank">共产暴政录：批判武训，拒绝特蕾莎修女</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/5/n11365941.md#1" target="_blank">【专访】澳参议员：制裁中共 不做迫害同谋</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/7/n12314680.md#1">【新闻看点】美大动作踩红线 北戴河要翻腾了</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/7/n12314650.md#1">邵阳禁电动车 数千市民市府抗议 追打交警</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/7/n12314824.md#1">美中关系恶化 裴敏欣：习近平始料未及</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/8/n12316242.md#1">中共趁疫情 将一家中美合资汽车厂国有化</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/7/n12314929.md#1">川普禁微信 首次触动中共防火墙内的心脏</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/7/n12314648.md#1">《花木兰》取消上映 影院老板砸海报视频传出</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/6/n12312580.md#1">曾遭设局陷嫖娼丑闻 黄海波获高圆圆惊喜庆生</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/7/n12313748.md#1">澎恰恰破产主持节目生变？制作人打气：做长久</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/6/n12311946.md#1">秘密离婚一年 米可白深夜宣布与尾牙大王情断</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/7/n12314970.md#1">为了身体健康？男星张嘉译改名张嘉益登热搜</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/2/14/n11869302.md#1">【命理】那些为皇帝看相算命的人</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/6/1/n12153439.md#1">违背原著的查抄荣国府</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/8/2/n12301722.md#1">巧于算计不吃亏？纪晓岚讲故事劝戒后人</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/20/7/28/n12288736.md#1">道家圣地——武当山</a></li>
-<li><a href="https://github.com/mlejrr3246/djy/blob/master/gb/9/2/2/n2414803.md#1">朱买臣“穷且益坚，不坠青云之志”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740247.md#1">【新闻看点】上海被爆加强封控 居委弄虚作假</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741091.md#1">【秦鹏直播】要官员剥离海外资产 习意欲何为？</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/19/n13741104.md#1">【横河观点】拜登东亚行 美50参议员挺台湾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740226.md#1">紧跟中共的大V遭封杀 对五毛粉红造成冲击</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739710.md#1">大陆两卫健委官员批清零政策  被指不寻常</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740103.md#1">传广西销毁捧习“口袋书” 相关报导已全删</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13740144.md#1">被问会否与周润发再合作 钟楚红：一定不拒绝</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/11/n13733128.md#1">睡醒有眼屎不是坏事！但眼屎过多小心3大警讯</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mlejrr3246/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mlejrr3246/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/9/n12317265.htm">反16号公投案 圣地亚哥集会并车队游行</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/8/9/n12317265.htm">反16号公投案 圣地亚哥集会并车队游行</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/mlejrr3246/djy/blob/master/gb/20/8/9/n12317265.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mlejrr3246/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mlejrr3246/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mlejrr3246/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mlejrr3246/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mlejrr3246/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/20/8/9/n12317265.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
